yaml/chat-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-back
  namespace: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-back
  template:
    metadata:
      labels:
        app: chat-back
    spec:
      containers:
      - name: chat-back
        image: stradivirus/chat-back:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: chat-back
  namespace: chat
spec:
  selector:
    app: chat-back
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
