yaml/chat-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-front
  namespace: chat
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chat-front
  template:
    metadata:
      labels:
        app: chat-front
    spec:
      containers:
      - name: chat-front
        image: stradivirus/chat-front:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: chat-front-service
  namespace: chat
spec:
  selector:
    app: chat-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
